Merk dat alles stiekem toch best lastig is. Maar begin is er.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="hero__link" href="#">
           <strong class="hero__category">Websites</strong>  
           <h1 class="hero__title">Toffe websites gemaakt met CSS Grid</h1>
-          <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p class="hero__text">Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </a>
       </div>
     </section>
